# mpypoc

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
cmake/: openmpi.cmake
impi/: CMakeLists.txt  pyproject.toml
impi/src/: mpypoc.cpp
openmpi/: CMakeLists.txt  README.md  pyproject.toml
python/mpypoc/: __init__.py  __main__.py  _runner.py
