[build-system]
requires = [
    "scikit-build-core>=0.9",
    "cmake>=3.26",
    "ninja>=1.10",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "mpypoc"
version = "0.1.0"
description = "Minimal C++ MPI program packaged for Python using CMake & scikit-build-core."
readme = "README.md"
license = "Unlicense"
license-files = ["LICENSE"]
authors = [{name = "tristandeb1"}]
requires-python = ">=3.8"
dependencies = ["importlib_resources>=5 ; python_version<'3.9'"]

[project.optional-dependencies]
dev = ["mpi4py>=3.1"]

[project.urls]
Source = "https://github.com/tristandeb1/mpypoc"

[tool.scikit-build]
sdist.exclude = [".*"]
wheel.packages = ["python/mpypoc"]
wheel.py-api = "py3"
cmake.version = "CMakeLists.txt"
